feat: generate.ts移動
